--- a/testcases/pi.in
+++ b/testcases/pi.in
@@ -1,6 +1,8 @@
 int r;
 double pi;
+double area;
+double cir;
 r = 5;
 pi = 3.14;
-area = pi * r * r;
-cir = pi * r + pi * r;
+area = pi + r + r;
+cir = pi + r + pi + r;
