--- a/testcases/pi.in
+++ b/testcases/pi.in
@@ -4,5 +4,5 @@ double area;
 double cir;
 r = 5;
 pi = 3.14;
-area = pi + r + r;
-cir = pi + r + pi + r;
+area = pi * r * r;
+cir = pi * r + pi * r;
